unpackaged/main/default/objects/Account/fields/Count_Customer_Feedbacks__c.field-meta.xml
<CustomField>
    <fullName>Count_Customer_Feedbacks__c</fullName>
    <label>Count Customer Feedbacks</label>
    <summaryForeignKey>Customer_Feedback__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>