unpackaged/main/default/objects/Account/fields/Hotel_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Email_ID__c</fullName>
    <inlineHelpText>Enter the email id of the Hotel.</inlineHelpText>
    <label>Hotel Email ID</label>
    <required>true</required>
    <type>Email</type>
</CustomField>