unpackaged/main/default/objects/Account/fields/Number_of_Staffs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Staffs__c</fullName>
    <inlineHelpText>Number of Staff in your Hotel.</inlineHelpText>
    <label>Number of Staffs</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>