unpackaged/main/default/objects/Account/fields/Overall_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_Rating__c</fullName>
    <formula>Sum_of_Customer_Feedback__c  /  Count_Customer_Feedbacks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Rating.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>