unpackaged/main/default/objects/Account/fields/Sum_of_Customer_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Customer_Feedback__c</fullName>
    <label>Sum of Customer Feedback</label>
    <summarizedField>Customer_Feedback__c.Overall_Rating__c</summarizedField>
    <summaryForeignKey>Customer_Feedback__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>