unpackaged/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Overall_Rating__c</columns>
    <columns>Number_of_Rooms__c</columns>
    <columns>Number_of_Staffs__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>